added new component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<div class="movie">
-<h1>testing</h1>
-</div>
+<div class="movieList">
+    <app-movie-card></app-movie-card>
 
+</div>
 
 
 <router-outlet></router-outlet>
