--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,16 @@
+<div class="container">
+
 <div class="movieList">
     <app-movie-card></app-movie-card>
-
+    <app-movie-card></app-movie-card>
+    <app-movie-card></app-movie-card>
+    <app-movie-card></app-movie-card>
+    <app-movie-card></app-movie-card>
 </div>
 
+<div class="footer">
+    <app-footer></app-footer>
+</div>
 
+</div>
 <router-outlet></router-outlet>
