--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,3 +1,9 @@
-<div class="movie">
-    <h1>testing</h1>
+<div class="movie-card">
+    <div>
+        <p>image here</p>
+    </div>
+    <div class="movie-info">
+        <h3>movie headline</h3>
+        <p> desc</p>
+    </div>
 </div>
