finished service for getting TMDB data, added property binding to movie cards

--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -1,9 +1,9 @@
 <div class="movie-card">
     <div>
-        <p>image here</p>
+        <img src={{image}} />
     </div>
     <div class="movie-info">
-        <h3>movie headline</h3>
+        <h3>{{title}}</h3>
         <p> desc</p>
     </div>
 </div>
