--- a/src/styles.css
+++ b/src/styles.css
@@ -15,5 +15,12 @@ body {
     font-family: 'Roboto';
     background-color: var(--main-bg-color);
     color: var(--main-txt-color);
-    
 }
+
+.footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    text-align: center;
+  }
