--- a/src/app/movie-card/movie-card.component.html
+++ b/src/app/movie-card/movie-card.component.html
@@ -6,4 +6,5 @@
         <h3>{{title}}</h3>
         <p> desc</p>
     </div>
+    <input type="button" class="reco-button" value="Recommend">
 </div>
