replaced footer with header component, added bg color to header, added flex property wrap

--- a/src/app/movie-card/movie-card.component.css
+++ b/src/app/movie-card/movie-card.component.css
@@ -16,7 +16,7 @@
     background-color: #f81f32;
     padding: 15px 32px;
     border:none;
-    margin: 0, auto;
+    margin-left:50px;
     color:#fefefe;
     text-align: center;
     display: inline-block;
