--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,16 +1,16 @@
 <div class="container">
 
-<div class="movieList">
-    <app-movie-card></app-movie-card>
-    <app-movie-card></app-movie-card>
-    <app-movie-card></app-movie-card>
-    <app-movie-card></app-movie-card>
-    <app-movie-card></app-movie-card>
-</div>
+    <div class="header">
+        <app-header></app-header>
+    </div>
 
-<div class="footer">
-    <app-footer></app-footer>
-</div>
+    <div class="movieList">
+        <app-movie-card></app-movie-card>
+        <app-movie-card></app-movie-card>
+        <app-movie-card></app-movie-card>
+        <app-movie-card></app-movie-card>
+        <app-movie-card></app-movie-card>
+    </div>
 
 </div>
 <router-outlet></router-outlet>
